crates/lowerer/tests/snapshots/upstream_parser_policy__policies6_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 263)
├─Policy [0, 154)
│ ├─Error [0, 84)
│ │ ├─Integer "3" [0, 1)
│ │ ├─OpenParenthesis "(" [1, 2)
│ │ ├─PrincipalKeyword "principal" [2, 11)
│ │ ├─Colon ":" [11, 12)
│ │ ├─Whitespace " " [12, 13)
│ │ ├─Identifier "p" [13, 14)
│ │ ├─Comma "," [14, 15)
│ │ ├─Whitespace " " [15, 16)
│ │ ├─ActionKeyword "action" [16, 22)
│ │ ├─Colon ":" [22, 23)
│ │ ├─Whitespace " " [23, 24)
│ │ ├─Identifier "a" [24, 25)
│ │ ├─Comma "," [25, 26)
│ │ ├─Whitespace " " [26, 27)
│ │ ├─ResourceKeyword "resource" [27, 35)
│ │ ├─Colon ":" [35, 36)
│ │ ├─Whitespace " " [36, 37)
│ │ ├─Identifier "r" [37, 38)
│ │ ├─CloseParenthesis ")" [38, 39)
│ │ ├─Whitespace "\n" [39, 40)
│ │ ├─WhenKeyword "when" [40, 44)
│ │ ├─Whitespace " " [44, 45)
│ │ ├─OpenBrace "{" [45, 46)
│ │ ├─Whitespace " " [46, 47)
│ │ ├─Identifier "w" [47, 48)
│ │ ├─Whitespace " " [48, 49)
│ │ ├─CloseBrace "}" [49, 50)
│ │ ├─Whitespace "\n" [50, 51)
│ │ ├─UnlessKeyword "unless" [51, 57)
│ │ ├─Whitespace " " [57, 58)
│ │ ├─OpenBrace "{" [58, 59)
│ │ ├─Whitespace " " [59, 60)
│ │ ├─Identifier "u" [60, 61)
│ │ ├─Whitespace " " [61, 62)
│ │ ├─CloseBrace "}" [62, 63)
│ │ ├─Whitespace "\n" [63, 64)
│ │ ├─Identifier "advice" [64, 70)
│ │ ├─Whitespace " " [70, 71)
│ │ ├─OpenBrace "{" [71, 72)
│ │ ├─Whitespace " " [72, 73)
│ │ ├─String "\"doit\"" [73, 79)
│ │ ├─Whitespace " " [79, 80)
│ │ ├─CloseBrace "}" [80, 81)
│ │ ├─Semicolon ";" [81, 82)
│ │ └─Whitespace "\n\n" [82, 84)
│ ├─PermitKeyword "permit" [84, 90)
│ ├─Whitespace " " [90, 91)
│ ├─OpenParenthesis "(" [91, 92)
│ ├─VariableDefinition [92, 104)
│ │ ├─PrincipalKeyword "principal" [92, 101)
│ │ ├─Colon ":" [101, 102)
│ │ ├─Whitespace " " [102, 103)
│ │ └─Name [103, 104)
│ │   └─Identifier "p" [103, 104)
│ ├─Comma "," [104, 105)
│ ├─Whitespace " " [105, 106)
│ ├─VariableDefinition [106, 115)
│ │ ├─ActionKeyword "action" [106, 112)
│ │ ├─Colon ":" [112, 113)
│ │ ├─Whitespace " " [113, 114)
│ │ └─Name [114, 115)
│ │   └─Identifier "a" [114, 115)
│ ├─Comma "," [115, 116)
│ ├─Whitespace " " [116, 117)
│ ├─VariableDefinition [117, 128)
│ │ ├─ResourceKeyword "resource" [117, 125)
│ │ ├─Colon ":" [125, 126)
│ │ ├─Whitespace " " [126, 127)
│ │ └─Name [127, 128)
│ │   └─Identifier "r" [127, 128)
│ ├─CloseParenthesis ")" [128, 129)
│ ├─Whitespace "\n" [129, 130)
│ ├─Condition [130, 141)
│ │ ├─WhenKeyword "when" [130, 134)
│ │ ├─Whitespace " " [134, 135)
│ │ ├─OpenBrace "{" [135, 136)
│ │ ├─Whitespace " " [136, 137)
│ │ ├─Name [137, 139)
│ │ │ ├─Identifier "w" [137, 138)
│ │ │ └─Whitespace " " [138, 139)
│ │ ├─CloseBrace "}" [139, 140)
│ │ └─Whitespace "\n" [140, 141)
│ └─Condition [141, 154)
│   ├─UnlessKeyword "unless" [141, 147)
│   ├─Whitespace " " [147, 148)
│   ├─OpenBrace "{" [148, 149)
│   ├─Whitespace " " [149, 150)
│   ├─Name [150, 152)
│   │ ├─Identifier "u" [150, 151)
│   │ └─Whitespace " " [151, 152)
│   ├─CloseBrace "}" [152, 153)
│   └─Whitespace "\n" [153, 154)
├─Policy [154, 244)
│ ├─Error [154, 174)
│ │ ├─Identifier "advice" [154, 160)
│ │ ├─Whitespace " " [160, 161)
│ │ ├─OpenBrace "{" [161, 162)
│ │ ├─Whitespace " " [162, 163)
│ │ ├─String "\"doit\"" [163, 169)
│ │ ├─Whitespace " " [169, 170)
│ │ ├─CloseBrace "}" [170, 171)
│ │ ├─Semicolon ";" [171, 172)
│ │ └─Whitespace "\n\n" [172, 174)
│ ├─PermitKeyword "permit" [174, 180)
│ ├─Whitespace " " [180, 181)
│ ├─OpenParenthesis "(" [181, 182)
│ ├─VariableDefinition [182, 194)
│ │ ├─PrincipalKeyword "principal" [182, 191)
│ │ ├─Colon ":" [191, 192)
│ │ ├─Whitespace " " [192, 193)
│ │ └─Name [193, 194)
│ │   └─Identifier "p" [193, 194)
│ ├─Comma "," [194, 195)
│ ├─Whitespace " " [195, 196)
│ ├─VariableDefinition [196, 205)
│ │ ├─ActionKeyword "action" [196, 202)
│ │ ├─Colon ":" [202, 203)
│ │ ├─Whitespace " " [203, 204)
│ │ └─Name [204, 205)
│ │   └─Identifier "a" [204, 205)
│ ├─Comma "," [205, 206)
│ ├─Whitespace " " [206, 207)
│ ├─VariableDefinition [207, 218)
│ │ ├─ResourceKeyword "resource" [207, 215)
│ │ ├─Colon ":" [215, 216)
│ │ ├─Whitespace " " [216, 217)
│ │ └─Name [217, 218)
│ │   └─Identifier "r" [217, 218)
│ ├─CloseParenthesis ")" [218, 219)
│ ├─Whitespace "\n" [219, 220)
│ ├─Condition [220, 231)
│ │ ├─WhenKeyword "when" [220, 224)
│ │ ├─Whitespace " " [224, 225)
│ │ ├─OpenBrace "{" [225, 226)
│ │ ├─Whitespace " " [226, 227)
│ │ ├─Name [227, 229)
│ │ │ ├─Identifier "w" [227, 228)
│ │ │ └─Whitespace " " [228, 229)
│ │ ├─CloseBrace "}" [229, 230)
│ │ └─Whitespace "\n" [230, 231)
│ └─Condition [231, 244)
│   ├─UnlessKeyword "unless" [231, 237)
│   ├─Whitespace " " [237, 238)
│   ├─OpenBrace "{" [238, 239)
│   ├─Whitespace " " [239, 240)
│   ├─Name [240, 242)
│   │ ├─Identifier "u" [240, 241)
│   │ └─Whitespace " " [241, 242)
│   ├─CloseBrace "}" [242, 243)
│   └─Whitespace "\n" [243, 244)
└─Policy [244, 263)
  └─Error [244, 263)
    ├─Identifier "advice" [244, 250)
    ├─Whitespace " " [250, 251)
    ├─OpenBrace "{" [251, 252)
    ├─Whitespace " " [252, 253)
    ├─String "\"doit\"" [253, 259)
    ├─Whitespace " " [259, 260)
    ├─CloseBrace "}" [260, 261)
    ├─Semicolon ";" [261, 262)
    └─Whitespace "\n" [262, 263)
