crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotation_bad_position.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:9
  │
1 │ permit (@comment("your name here") principal, action, resource);
  ╰╴        ━ expected `)`
error: missing policy effect
  ╭▸ test:1:9
  │
1 │ permit (@comment("your name here") principal, action, resource);
  ╰╴        ━━━━━━━━━━━━━━━━━━━━━━━━━━━ expected `permit` or `forbid`
error: missing policy effect
  ╭▸ test:1:36
  │
1 │ permit (@comment("your name here") principal, action, resource);
  ╰╴                                   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ expected `permit` or `forbid`
