crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_id_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..61
╰─ policy 0..61
   ├─ annotation 0..23
   │  ├─ @ 0..1
   │  ├─ identifier 1..4
   │  ├─ error 4..15
   │  │  ├─ - 4..5
   │  │  ╰─ identifier 5..15
   │  ├─ ( 15..16
   │  ├─ string 16..21
   │  ├─ ) 21..22
   │  ╰─ whitespace 22..23
   ├─ permit 23..29
   ├─ whitespace 29..30
   ├─ scope 30..59
   │  ├─ ( 30..31
   │  ├─ variable definition 31..40
   │  │  ╰─ principal 31..40
   │  ├─ , 40..41
   │  ├─ whitespace 41..42
   │  ├─ variable definition 42..48
   │  │  ╰─ action 42..48
   │  ├─ , 48..49
   │  ├─ whitespace 49..50
   │  ├─ variable definition 50..58
   │  │  ╰─ resource 50..58
   │  ╰─ ) 58..59
   ├─ ; 59..60
   ╰─ whitespace 60..61
