crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_id_1_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..61
├─Policy 0..4
│ ├─Annotation 0..4
│ │ ├─At "@" 0..1
│ │ └─Identifier "bad" 1..4
│ └─Semicolon "" 4..4
└─Policy 4..61
  ├─Error 4..23
  │ ├─Subtract "-" 4..5
  │ ├─Identifier "annotation" 5..15
  │ ├─OpenParenthesis "(" 15..16
  │ ├─String "\"bad\"" 16..21
  │ ├─CloseParenthesis ")" 21..22
  │ └─Newline "\n" 22..23
  ├─PermitKeyword "permit" 23..29
  ├─Whitespace " " 29..30
  ├─Scope 30..59
  │ ├─OpenParenthesis "(" 30..31
  │ ├─VariableDefinition 31..40
  │ │ └─PrincipalKeyword "principal" 31..40
  │ ├─Comma "," 40..41
  │ ├─Whitespace " " 41..42
  │ ├─VariableDefinition 42..48
  │ │ └─ActionKeyword "action" 42..48
  │ ├─Comma "," 48..49
  │ ├─Whitespace " " 49..50
  │ ├─VariableDefinition 50..58
  │ │ └─ResourceKeyword "resource" 50..58
  │ └─CloseParenthesis ")" 58..59
  ├─Semicolon ";" 59..60
  └─Newline "\n" 60..61
