crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_id_2_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `;`
  ╭▸ policy_annotations_bad_id_2:1:5
  │
1 │ @hi mom("this should be invalid")
  ╰╴    ━━━ expected `;`
error: unexpected token
  ╭▸ policy_annotations_bad_id_2:1:5
  │
1 │   @hi mom("this should be invalid")
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━┛ unexpected token
error: missing policy effect
  ╭▸ policy_annotations_bad_id_2:1:1
  │
1 │ @hi mom("this should be invalid")
  ╰╴━━━━ expected `permit` or `forbid`
error: unexpected token
  ╭▸ policy_annotations_bad_id_2:1:5
  │
1 │   @hi mom("this should be invalid")
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━┛ unexpected token
